#17 Fixed stuck elements.

--- a/src/blocks/registration/registration.scss
+++ b/src/blocks/registration/registration.scss
@@ -66,9 +66,9 @@
     margin-right: 20px;
   }
 
-  @media screen and (max-width: 380px) {
-    max-width: 320px;
+  @media screen and (max-width: 420px) {
+    max-width: 300px;
     margin: 20px 0;
-    padding: 40px 26px 30px;
+    padding: 20px 16px 20px;
   }
 }
