--- a/src/blocks/search-room/search-room.scss
+++ b/src/blocks/search-room/search-room.scss
@@ -21,8 +21,8 @@
     position: relative;
   }
 
-  @media screen and (max-width: 380px) {
-    max-width: 320px;
-    padding: 40px 26px 30px;
+  @media screen and (max-width: 420px) {
+    max-width: 300px;
+    padding: 20px 16px 20px;
   }
 }
